--- a/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
+++ b/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
@@ -124,8 +124,8 @@
             <dxi-column dataField="cliente" caption="CLIENTE"></dxi-column>
             <dxi-column dataField="nombre" caption="NOMBRE"></dxi-column>
             <dxi-column dataField="documento" caption="DOCUMENTO" ></dxi-column>
-            <dxi-column dataField="interIdCliente" caption="ID CLIENTE TERCERO" ></dxi-column>
-            <dxi-column dataField="interCliente" caption="NOMBRE CLIENTE TERCERO" ></dxi-column>
+            <dxi-column dataField="interIdCliente" caption="ID" ></dxi-column>
+            <dxi-column dataField="interCliente" caption="CLIENTE INTERCOMPAÑIA" ></dxi-column>
 
             <!-- <dxi-column dataField="serie" caption="SERIE" [width]="100"></dxi-column>
             
