--- a/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
+++ b/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
@@ -85,7 +85,7 @@
                     <dxi-location screen="md lg" [row]="0" [col]="1"></dxi-location>
                     <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="11" [col]="0" [colspan]="12"></dxi-location>
                     <dx-select-box [items]="clientes" displayExpr="cliente" valueExpr="idCliente" [searchEnabled]="true"
-                    [searchExpr]="['cliente']" (onValueChanged)="selectedClientes($event)">
+                    [searchExpr]="['cliente']" (onValueChanged)="selectedClientes($event)" id="select">
                     </dx-select-box>
                 </dxi-item>
 
