nuevo grind en cartera clientes

--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -142,6 +142,41 @@
                     </dx-scroll-view>
                 </div>
             </dx-popup>
+
+            <br><br>
+            <dx-data-grid  #ER id="gridContainer3" [dataSource]="carteraMI" [height]="700"[showBorders]="true" [columnAutoWidth]="true"
+            (onRowPrepared)="onRowPreparedCC($event)" (onCellPrepared)="onCellPreparedCC($event)">
+
+              <dxo-scrolling mode="virtual" rowRenderingMode="virtual"></dxo-scrolling>
+              <dxo-paging [pageSize]="100"></dxo-paging>
+              <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
+              <dxo-export [enabled]="true" fileName="CARTERA Inter Compañia" [customizeExcelCell]="customizeCAER"></dxo-export>
+                
+              <dxi-column caption="{{printValue+' - '+ printPeriodo}}">
+                <dxi-column dataField="cliente" caption="" [groupIndex]="0"></dxi-column>
+                <dxi-column dataField="intercompania" caption="Intercompañia"></dxi-column>
+                <dxi-column dataField="corriente" caption="Corriente" [format]="separator"></dxi-column>
+                <dxi-column dataField="per1a30" caption="1 A 30" [format]="separator"></dxi-column>
+                <dxi-column dataField="per31a60" caption="31 A 60" [format]="separator"></dxi-column>
+                <dxi-column dataField="per61a90" caption="61 A 90" [format]="separator"></dxi-column>
+                <dxi-column dataField="permayor90" caption="MAS 90" [format]="separator"></dxi-column>
+                <dxi-column dataField="total" caption="Total" cssClass="styletotal" [format]="separator"></dxi-column>
+              </dxi-column>
+
+              <dxo-summary>
+                <dxi-total-item column="cliente" [customizeText]="customizeDate"></dxi-total-item>
+                <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                <dxi-total-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+              </dxo-summary>
+
+            </dx-data-grid>
+
+
+
         </dxi-item>
 
         <dxi-item title="Detalle">
