--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -164,7 +164,7 @@
               </dxi-column>
 
               <dxo-summary>
-                <dxi-total-item column="cliente" [customizeText]="customizeDate"></dxi-total-item>
+                <dxi-total-item column="cliente"></dxi-total-item>
                 <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                 <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                 <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
