actualizacion grids carteras

--- a/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
+++ b/src/app/pages/CarteraInterCompanias/carteraInterCompanias.component.html
@@ -153,6 +153,7 @@
             <dxi-column dataField="cliente" caption="CLIENTE"></dxi-column>
             <dxi-column dataField="nombre" caption="NOMBRE"></dxi-column>
             <dxi-column dataField="documento" caption="DOCUMENTO" ></dxi-column>
+            <dxi-column dataField="totaL_INTEGRADO" caption="Monto" [format]="separator" ></dxi-column>
             <dxi-column dataField="interIdCliente" caption="ID" ></dxi-column>
             <dxi-column dataField="interCliente" caption="CLIENTE INTERCOMPAÑIA" ></dxi-column>
             <dxi-column dataField="interIdArea" caption="IdArea" ></dxi-column>
