--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -145,7 +145,7 @@
 
             <br><br>
             <dx-data-grid  #ER id="gridContainer3" [dataSource]="carteraMI" [height]="700"[showBorders]="true" [columnAutoWidth]="true"
-            (onRowPrepared)="onRowPreparedCC($event)" (onCellPrepared)="onCellPreparedCC($event)">
+            (onRowPrepared)="onRowPreparedCMI($event)" (onCellPrepared)="onCellPreparedCMI($event)">
 
               <dxo-scrolling mode="virtual" rowRenderingMode="virtual"></dxo-scrolling>
               <dxo-paging [pageSize]="100"></dxo-paging>
@@ -165,6 +165,7 @@
 
               <dxo-summary>
                 <dxi-total-item column="cliente"></dxi-total-item>
+                <dxi-total-item column="intercompania" [customizeText]="customizeIC"></dxi-total-item>
                 <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                 <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                 <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
